# Akinator

./: CMakeLists.txt  config.h  container.db  graph.gv  main.cpp
Callbacks/: Callbacks.cpp  Callbacks.h
Lib/: filestuff.cpp  filestuff.h
Node/: Node.cpp  Node.h
Parser/: Parser.cpp  Parser.h
Tree/: Tree.cpp  Tree.h
